--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@
     color: white;
 
 }
+.a12{
+    color: aliceblue;
+}
 .container2{
     /* border: 2px solid pink; */
     height: 400px;
@@ -69,4 +72,61 @@
 #b{
     height: 100%;
     width: 100%;
+}
+.container3{
+    /* border: 2px solid red; */
+    height: 40px;
+}
+.container3>div{
+    border: 2px solid wheat;
+    height: 40px;
+    background-color: white;
+}
+#a11{
+    display: flex;
+    justify-content: center;
+    font-size:15px;
+    text-align: center;
+}
+.container4{
+  
+    border: 2px solid black;
+    height: 900px;
+    margin-top:5px ;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+   
+    
+}
+.container4>div{
+    border: 2px solid orange;
+    width: 360px;
+    margin: 3px;
+    height: 400px;
+}
+.ab{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+    
+}
+
+.ab>div{
+    border: 2px solid pink;
+    height: 100px;
+    width: 150px;
+    
+}
+#h{
+    font-size: 30px;
+    display: flex;
+    justify-content:left;
+}
+.img{
+    width: 100%;
+    height: 100%;
 }
