--- a/style.css
+++ b/style.css
@@ -97,14 +97,16 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
    
     
 }
 .container4>div{
-    border: 2px solid orange;
+    /* border: 2px solid orange; */
     width: 360px;
     margin: 3px;
     height: 400px;
+    background-color: aliceblue;
 }
 .ab{
     display: flex;
@@ -116,12 +118,12 @@
 }
 
 .ab>div{
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
     height: 100px;
     width: 150px;
     
 }
-#h{
+.h{
     font-size: 30px;
     display: flex;
     justify-content:left;
@@ -130,3 +132,25 @@
     width: 100%;
     height: 100%;
 }
+
+.ab1>div{
+    /* border: 2px solid red; */
+    height: 70%;
+    margin-top: 40px;
+    
+}
+.h1{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px ;
+    font-size: 30px;
+}
+.ab{
+
+}
+.ab>div{
+    /* border: 2px solid pink; */
+    height: 100px;
+    width: 150px;
+}
+
